--- a/back/src/main/resources/application.yaml
+++ b/back/src/main/resources/application.yaml
@@ -9,14 +9,14 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://146.56.235.254:3306/chuangyue
+    url: jdbc:mysql://124.70.192.26:3306/chuangyue
     username: root
     password: Zypszabl
     hikari:
       max-lifetime: 60000
   data:
     redis:
-      host: 146.56.235.254
+      host: 124.70.192.26
       password: Zypszabl
       port: 6379
       lettuce:
@@ -57,13 +57,13 @@ chuangyue:
     secret: ${chuangyue.wechat.secret}
   minio:
     # 访问的url
-    endpoint: http://146.56.235.254
+    endpoint: http://124.70.192.26
     # API的端口
     port: 9000
     # 秘钥
-    accessKey: M9OUgYQSGmO0eIFvjSbv
-    secretKey: ujBdEWdxEG3outCmX5NZiUFJ5VlCHWuRMvsv9jm9
+    accessKey: QUltmDHg5rybDgpqIFqB
+    secretKey: nT8whlTajgnrc8vljZLwpsbWzBQCEJCtebsi6C1Y
     secure: false
-    bucket-name: chuangyue-medicine-photo # 桶名 我这是给出了一个默认桶名
+    bucket-name: chuangyue-doctor # 桶名 我这是给出了一个默认桶名
     image-size: 10485760 # 我在这里设定了 图片文件的最大大小
     file-size: 1073741824 # 此处是设定了文件的最大大小
